@@ -1,3 +1,8 @@
+2001-12-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-inject (inject_message): Optionally, add an
+	X-TMDA-Fingerprint header.
+
 2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (inject_message): Optionally remove the headers
