@@ -1,3 +1,7 @@
+2001-12-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add FINGERPRINT.
+
 2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* sample.tmdarc: Add PURGED_HEADERS.
